调整到nexus2.x版本。